gcc/testsuite/g++.old-deja/g++.robertl/eb92.C
// { dg-do assemble  }
template<int N> f<0>(){}  // { dg-error "" } invalid code
